forts/manifests/data-connector-rest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "3005"
    prometheus.io/scrape: "true"
  labels:
    action: command
    app: data-connector-rest
    app.kubernetes.io/component: data-connector-rest
    app.kubernetes.io/instance: data-connector-rest
    app.kubernetes.io/name: data-connector-rest
    app.kubernetes.io/version: 2.145.0
    chart: data-connector-rest-2.145.0
    domain: data-connectors
    heritage: Helm
    release: data-connector-rest
  name: data-connector-rest-cmd
  namespace: default
spec:
  ports:
    - name: http
      port: 3005
      protocol: TCP
      targetPort: 3005
    - name: http-web
      port: 6384
      protocol: TCP
      targetPort: 6384
    - name: grpc
      port: 50060
      protocol: TCP
      targetPort: 50060
  selector:
    action: command
    app: data-connector-rest
    release: data-connector-rest
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "3005"
    prometheus.io/scrape: "true"
  labels:
    action: reload
    app: data-connector-rest
    app.kubernetes.io/component: data-connector-rest
    app.kubernetes.io/instance: data-connector-rest
    app.kubernetes.io/name: data-connector-rest
    app.kubernetes.io/version: 2.145.0
    chart: data-connector-rest-2.145.0
    domain: data-connectors
    heritage: Helm
    release: data-connector-rest
  name: data-connector-rest-rld
  namespace: default
spec:
  ports:
    - name: http
      port: 3005
      protocol: TCP
      targetPort: 3005
    - name: grpc
      port: 50060
      protocol: TCP
      targetPort: 50060
  selector:
    action: reload
    app: data-connector-rest
    release: data-connector-rest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    action: command
    app: data-connector-rest
    app.kubernetes.io/component: data-connector-rest
    app.kubernetes.io/instance: data-connector-rest
    app.kubernetes.io/name: data-connector-rest
    app.kubernetes.io/version: 2.145.0
    chart: data-connector-rest-2.145.0
    domain: data-connectors
    heritage: Helm
    release: data-connector-rest
  name: data-connector-rest-cmd
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      action: command
      app: data-connector-rest
      release: data-connector-rest
  template:
    metadata:
      annotations:
        checksum/configs: 38a36250209bd4cd7e87539a2e901fd7d2526bd9e898301ca83af067e5d249d1
        checksum/secrets: 6cc0f0fc7c19d8729cc5b260c212bb50816e436e2d998a6839e48adb324d3edf
      labels:
        action: command
        app: data-connector-rest
        domain: data-connectors
        release: data-connector-rest
    spec:
      containers:
        - env:
            - name: DATA_HOST
              valueFrom:
                configMapKeyRef:
                  key: dataHost
                  name: data-connector-rest-configs
            - name: DATA_PORT_RANGE_END
              valueFrom:
                configMapKeyRef:
                  key: dataPortRangeEnd
                  name: data-connector-rest-configs
            - name: DATA_PORT_RANGE_START
              valueFrom:
                configMapKeyRef:
                  key: dataPortRangeStart
                  name: data-connector-rest-configs
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: logLevel
                  name: data-connector-rest-configs
            - name: CONFIG
              value: /opt/runner/Rest_dotnetcore.json
            - name: QS_ENVIRONMENT
              value: QSEOK
            - name: SERVICE_MODE
              value: "true"
            - name: STANDALONE
              value: "false"
            - name: JAEGER_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: OTLP_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: HTTP_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpProxy
                  name: qliksense-configs
            - name: HTTPS_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpsProxy
                  name: qliksense-configs
            - name: NO_PROXY
              valueFrom:
                configMapKeyRef:
                  key: noProxy
                  name: qliksense-configs
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: qliksense-secrets
            - name: MONGODB_URI_FILE
              value: /run/secrets/qlik.com/qliksense/mongodbUri
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redisPassword
                  name: qliksense-secrets
            - name: REDIS_PASSWORD_FILE
              value: /run/secrets/qlik.com/qliksense/redisPassword
          image: ghcr.io/qlik-download/data-connector-rest:2.145.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
          name: data-connector-rest
          ports:
            - containerPort: 3005
              name: http
              protocol: TCP
            - containerPort: 50060
              name: grpc
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/ssl/certs
              name: ca-certificates
            - mountPath: /run/secrets/qlik.com/qliksense
              name: qliksense-secrets
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - name: data-connector-rest-secrets
          secret:
            secretName: data-connector-rest-secrets
        - name: ca-certificates
          persistentVolumeClaim:
            claimName: ca-certificates
        - name: qliksense-secrets
          secret:
            secretName: qliksense-secrets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    action: reload
    app: data-connector-rest
    app.kubernetes.io/component: data-connector-rest
    app.kubernetes.io/instance: data-connector-rest
    app.kubernetes.io/name: data-connector-rest
    app.kubernetes.io/version: 2.145.0
    chart: data-connector-rest-2.145.0
    domain: data-connectors
    heritage: Helm
    release: data-connector-rest
  name: data-connector-rest-rld
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      action: reload
      app: data-connector-rest
      release: data-connector-rest
  template:
    metadata:
      annotations:
        checksum/configs: 38a36250209bd4cd7e87539a2e901fd7d2526bd9e898301ca83af067e5d249d1
        checksum/secrets: 6cc0f0fc7c19d8729cc5b260c212bb50816e436e2d998a6839e48adb324d3edf
      labels:
        action: reload
        app: data-connector-rest
        domain: data-connectors
        release: data-connector-rest
    spec:
      containers:
        - env:
            - name: DATA_HOST
              valueFrom:
                configMapKeyRef:
                  key: dataHost
                  name: data-connector-rest-configs
            - name: DATA_PORT_RANGE_END
              valueFrom:
                configMapKeyRef:
                  key: dataPortRangeEnd
                  name: data-connector-rest-configs
            - name: DATA_PORT_RANGE_START
              valueFrom:
                configMapKeyRef:
                  key: dataPortRangeStart
                  name: data-connector-rest-configs
            - name: LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: logLevel
                  name: data-connector-rest-configs
            - name: CONFIG
              value: /opt/runner/Rest_dotnetcore.json
            - name: ENABLE_SHUTDOWN_DRAIN
              value: "false"
            - name: MAX_ACTIVE_RELOADS
              value: "3"
            - name: QS_ENVIRONMENT
              value: QSEOK
            - name: SERVICE_MODE
              value: "true"
            - name: SHUTDOWN_TIMEOUT
              value: "30"
            - name: STANDALONE
              value: "false"
            - name: JAEGER_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: OTLP_AGENT_HOST
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: HTTP_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpProxy
                  name: qliksense-configs
            - name: HTTPS_PROXY
              valueFrom:
                configMapKeyRef:
                  key: httpsProxy
                  name: qliksense-configs
            - name: NO_PROXY
              valueFrom:
                configMapKeyRef:
                  key: noProxy
                  name: qliksense-configs
            - name: MONGODB_URI
              valueFrom:
                secretKeyRef:
                  key: mongodbUri
                  name: qliksense-secrets
            - name: MONGODB_URI_FILE
              value: /run/secrets/qlik.com/qliksense/mongodbUri
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redisPassword
                  name: qliksense-secrets
            - name: REDIS_PASSWORD_FILE
              value: /run/secrets/qlik.com/qliksense/redisPassword
          image: ghcr.io/qlik-download/data-connector-rest:2.145.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
          name: data-connector-rest
          ports:
            - containerPort: 3005
              name: http
              protocol: TCP
            - containerPort: 50060
              name: grpc
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readiness
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/ssl/certs
              name: ca-certificates
            - mountPath: /run/secrets/qlik.com/qliksense
              name: qliksense-secrets
      imagePullSecrets:
        - name: artifactory-docker-secret
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data-connector-rest-secrets
          secret:
            secretName: data-connector-rest-secrets
        - name: ca-certificates
          persistentVolumeClaim:
            claimName: ca-certificates
        - name: qliksense-secrets
          secret:
            secretName: qliksense-secrets
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/login?returnto=$escaped_request_uri
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$2
  labels:
    app: data-connector-rest
    app.kubernetes.io/component: data-connector-rest
    app.kubernetes.io/instance: data-connector-rest
    app.kubernetes.io/name: data-connector-rest
    app.kubernetes.io/version: 2.145.0
    chart: data-connector-rest-2.145.0
    domain: data-connectors
    heritage: Helm
    release: data-connector-rest
  name: data-connector-rest
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: data-connector-rest-cmd
                port:
                  number: 6384
            path: /customdata/64/(QvRestConnector)/(.+)
            pathType: ImplementationSpecific
